--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบค้นหา</title>
+   <!-- <title>ระบบค้นหา</title> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark  mb-3">
+   <!-- <nav class="navbar navbar-expand-md navbar-dark  mb-3">
         <div class="container-fluid">
             <a href="index.html" class="navbar-brand mr-3">ระบบค้นหาคลิป</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>    
-    </nav>
+    </nav> -->
     <div class="container">
-        <div class="center">
+       <!-- <div class="center">
             <img src="./img/img1.jpg" width="250px" >
             <h1>ระบบค้นหา</h1>
             <p class="lead"> ให้พิมพ์คีย์เวิรด์ค้นหา <br>
             แล้วกดปุ่ม "ค้นหา"
             </p>
-        </div>
+        </div> -->
         <div class="row">
             <div class="">
-                <label for="keyword" >พิมพ์ค้นหา : </label>
-                <input type="text" class="form-control" id="keyword" name="keyword" placeholder="ให้พิมพ์คีย์เวิรด์ค้นหา" data-siid="si_input_0"> <br>
-                <button type="button" class="btn btn-primary" id="btn">ค้นหา</button>
+                <label for="keyword" >Cari : </label>
+                <input type="text" class="form-control" id="keyword" name="keyword" placeholder="Tulis Keyword" data-siid="si_input_0"> <br>
+                <button type="button" class="btn btn-primary" id="btn">Cari</button>
                 <script src="./script.js"></script>
             </div>
         </div>
@@ -40,7 +40,7 @@
 
     <!-- ====================== footer ======================= -->
 
-<footer id="footer">
+<!-- <footer id="footer">
     <div class="footer">
       <br>
       <P>Create By Ameen Yongstar <br> 💻 COMPUTER_SCI  🏢 Srinakharinwirot university</P>
@@ -54,7 +54,7 @@
         </div>
     </div>
     
-  </footer>
+  </footer> -->
   
   <!-- ====================== footer ======================= -->
 
