--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 <!-- <footer id="footer">
     <div class="footer">
       <br>
-      <P>Create By Ameen Yongstar <br> 💻 COMPUTER_SCI  🏢 Srinakharinwirot university</P>
+      <P>Create By Ameen Yongstar <br> 💻 COMPUTER_SCI  🏢 Srinakharinwirot university</P> -->
   
         <!-- social media icons -->
-        <div class="social-icons mt-4">
+      <!--  <div class="social-icons mt-4">
             <a href="https://www.facebook.com/ameenyongstar/" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/meen_yongstar/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://line.me/ti/p/mn3MWB1TLt" target="_blank"><i class="fab fa-line"></i></a>
